--- a/TASK1/index.html
+++ b/TASK1/index.html
@@ -31,8 +31,8 @@
     <div class="header-container container">
       <div class="header-left">
         <h1>Hello,</h1>
-        <h2>I am <span id="s">Sarang </span>Singhal</h2>
-        <p class="typing-text">I am a <span id="typed-text"></span><span id="cursor">|</span></p>
+        <h2>I'm <span id="s">Sarang </span>Singhal</h2>
+        <p class="typing-text"><Span id="ima">I am a </Span> <span id="typed-text"></span><span id="cursor">|</span></p>
         <p>
           Master in HTML, CSS, JavaScript, and React.js with experience in
           Windows and Linux environments. Committed to delivering high-quality
@@ -208,7 +208,7 @@ Achieved high accuracy by training and tuning multiple algorithms..</p>
 
     typeWriter();
 
-    // === Starfield Animation ===
+
     const starfield = document.querySelector('.starfield');
     const numStars = 150;
 
