--- a/TASK1/index.html
+++ b/TASK1/index.html
@@ -40,7 +40,7 @@
         </p>
         <h5>Frontend Developer</h5>
         <div class="header-action-aria">
-          <a href="cv.pdf" download class="btn btn-primary">Download CV</a>
+          <a href="sarang_resume.pdf" download class="btn btn-primary">Download CV</a>
           <a href="#About" class="btn">Read more</a>
         </div>
       </div>
